--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,21 +1,22 @@
 {
-    "/dist/app.js": "/dist/app.js",
-    "/dist/blocks/text.js": "/dist/blocks/text.js",
-    "/dist/app.css": "/dist/app.css",
-    "/dist/images/arrow-right-white.svg": "/dist/images/arrow-right-white.svg",
-    "/dist/images/arrow-right.svg": "/dist/images/arrow-right.svg",
-    "/dist/images/sample-image.jpg": "/dist/images/sample-image.jpg",
-    "/dist/images/↑.svg": "/dist/images/↑.svg",
-    "/dist/fonts/graphik/GraphikLight.otf": "/dist/fonts/graphik/GraphikLight.otf",
-    "/dist/fonts/graphik/GraphikRegular.otf": "/dist/fonts/graphik/GraphikRegular.otf",
-    "/dist/fonts/inter/Inter-Bold.woff": "/dist/fonts/inter/Inter-Bold.woff",
-    "/dist/fonts/inter/Inter-Bold.woff2": "/dist/fonts/inter/Inter-Bold.woff2",
-    "/dist/fonts/inter/Inter-Medium.woff": "/dist/fonts/inter/Inter-Medium.woff",
-    "/dist/fonts/inter/Inter-Medium.woff2": "/dist/fonts/inter/Inter-Medium.woff2",
-    "/dist/fonts/inter/Inter-Regular.woff": "/dist/fonts/inter/Inter-Regular.woff",
-    "/dist/fonts/inter/Inter-Regular.woff2": "/dist/fonts/inter/Inter-Regular.woff2",
-    "/dist/fonts/nib-pro/NibPro-Regular.ttf": "/dist/fonts/nib-pro/NibPro-Regular.ttf",
-    "/dist/fonts/nib-pro/NibPro-SemiBold.ttf": "/dist/fonts/nib-pro/NibPro-SemiBold.ttf",
-    "/dist/fonts/graphik/GraphikMedium.otf": "/dist/fonts/graphik/GraphikMedium.otf",
-    "/dist/images/arrow-right-black.svg": "/dist/images/arrow-right-black.svg"
+    "/dist/app.js": "/dist/app.js?id=d09fdb9b19e9376ebea55b948663574d",
+    "/dist/blocks/text.js": "/dist/blocks/text.js?id=d41d8cd98f00b204e9800998ecf8427e",
+    "/dist/editor.css": "/dist/editor.css?id=c5d4930d932e44f53b5b143eef9c6396",
+    "/dist/app.css": "/dist/app.css?id=7f382465a7fe229b93a6892717c89374",
+    "/dist/images/arrow-right-black.svg": "/dist/images/arrow-right-black.svg?id=93e2eda19cc9f05d0255099c9c15dc98",
+    "/dist/images/arrow-right-white.svg": "/dist/images/arrow-right-white.svg?id=f6b59a0fd671c775dfa94ee62d4c0e2c",
+    "/dist/images/arrow-right.svg": "/dist/images/arrow-right.svg?id=7ad45cec8dca4154a4058e987ac11303",
+    "/dist/images/sample-image.jpg": "/dist/images/sample-image.jpg?id=51bfbe0c2d3bc8df0460c0f6f4b8d288",
+    "/dist/images/↑.svg": "/dist/images/↑.svg?id=7ad45cec8dca4154a4058e987ac11303",
+    "/dist/fonts/graphik/GraphikLight.otf": "/dist/fonts/graphik/GraphikLight.otf?id=01f16bf3e394543179254120111f498c",
+    "/dist/fonts/graphik/GraphikMedium.otf": "/dist/fonts/graphik/GraphikMedium.otf?id=ac2c53a1537de3ab3b858878f3811383",
+    "/dist/fonts/graphik/GraphikRegular.otf": "/dist/fonts/graphik/GraphikRegular.otf?id=9f77f5a3abbe6495080ea1ac2f133421",
+    "/dist/fonts/inter/Inter-Bold.woff": "/dist/fonts/inter/Inter-Bold.woff?id=30c82e2fe5430c4ac19e6db480a40730",
+    "/dist/fonts/inter/Inter-Bold.woff2": "/dist/fonts/inter/Inter-Bold.woff2?id=2bdb1fb3ddb113468239c9dfa9889ecf",
+    "/dist/fonts/inter/Inter-Medium.woff": "/dist/fonts/inter/Inter-Medium.woff?id=3d54c2db84475987ec21de0943859abc",
+    "/dist/fonts/inter/Inter-Medium.woff2": "/dist/fonts/inter/Inter-Medium.woff2?id=474e3d5a2d3cdd48ad8924807e2278e4",
+    "/dist/fonts/inter/Inter-Regular.woff": "/dist/fonts/inter/Inter-Regular.woff?id=c4fc5570d8d2a06d44531af4b11e1fd6",
+    "/dist/fonts/inter/Inter-Regular.woff2": "/dist/fonts/inter/Inter-Regular.woff2?id=f5af1f40cf0210f374cece0e369a988e",
+    "/dist/fonts/nib-pro/NibPro-Regular.ttf": "/dist/fonts/nib-pro/NibPro-Regular.ttf?id=98c181080aca630f5f27bfc7b830db08",
+    "/dist/fonts/nib-pro/NibPro-SemiBold.ttf": "/dist/fonts/nib-pro/NibPro-SemiBold.ttf?id=2a4fbc49e39ae9559334a5d6786c485a"
 }
