--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,22 +1,23 @@
 {
-    "/dist/app.js": "/dist/app.js",
-    "/dist/blocks/text.js": "/dist/blocks/text.js",
-    "/dist/blocks/slider.js": "/dist/blocks/slider.js",
-    "/dist/app.css": "/dist/app.css",
-    "/dist/images/arrow-right-black.svg": "/dist/images/arrow-right-black.svg",
-    "/dist/images/arrow-right-white.svg": "/dist/images/arrow-right-white.svg",
-    "/dist/images/arrow-right.svg": "/dist/images/arrow-right.svg",
-    "/dist/images/sample-image.jpg": "/dist/images/sample-image.jpg",
-    "/dist/images/↑.svg": "/dist/images/↑.svg",
-    "/dist/fonts/graphik/GraphikLight.otf": "/dist/fonts/graphik/GraphikLight.otf",
-    "/dist/fonts/graphik/GraphikMedium.otf": "/dist/fonts/graphik/GraphikMedium.otf",
-    "/dist/fonts/graphik/GraphikRegular.otf": "/dist/fonts/graphik/GraphikRegular.otf",
-    "/dist/fonts/inter/Inter-Bold.woff": "/dist/fonts/inter/Inter-Bold.woff",
-    "/dist/fonts/inter/Inter-Bold.woff2": "/dist/fonts/inter/Inter-Bold.woff2",
-    "/dist/fonts/inter/Inter-Medium.woff": "/dist/fonts/inter/Inter-Medium.woff",
-    "/dist/fonts/inter/Inter-Medium.woff2": "/dist/fonts/inter/Inter-Medium.woff2",
-    "/dist/fonts/inter/Inter-Regular.woff": "/dist/fonts/inter/Inter-Regular.woff",
-    "/dist/fonts/inter/Inter-Regular.woff2": "/dist/fonts/inter/Inter-Regular.woff2",
-    "/dist/fonts/nib-pro/NibPro-Regular.ttf": "/dist/fonts/nib-pro/NibPro-Regular.ttf",
-    "/dist/fonts/nib-pro/NibPro-SemiBold.ttf": "/dist/fonts/nib-pro/NibPro-SemiBold.ttf"
+    "/dist/app.js": "/dist/app.js?id=d22fc90b2b21a09e8ec995d417771d49",
+    "/dist/blocks/text.js": "/dist/blocks/text.js?id=d41d8cd98f00b204e9800998ecf8427e",
+    "/dist/blocks/slider.js": "/dist/blocks/slider.js?id=ec05bc6c4417acb6b335f7f284e1097d",
+    "/dist/editor.css": "/dist/editor.css?id=f60525636a29304c81f5d69d8eb34d02",
+    "/dist/app.css": "/dist/app.css?id=2e17bd6bb9e81502e76584bca40c3783",
+    "/dist/images/arrow-right-black.svg": "/dist/images/arrow-right-black.svg?id=93e2eda19cc9f05d0255099c9c15dc98",
+    "/dist/images/arrow-right-white.svg": "/dist/images/arrow-right-white.svg?id=f6b59a0fd671c775dfa94ee62d4c0e2c",
+    "/dist/images/arrow-right.svg": "/dist/images/arrow-right.svg?id=7ad45cec8dca4154a4058e987ac11303",
+    "/dist/images/sample-image.jpg": "/dist/images/sample-image.jpg?id=51bfbe0c2d3bc8df0460c0f6f4b8d288",
+    "/dist/images/↑.svg": "/dist/images/↑.svg?id=7ad45cec8dca4154a4058e987ac11303",
+    "/dist/fonts/graphik/GraphikLight.otf": "/dist/fonts/graphik/GraphikLight.otf?id=01f16bf3e394543179254120111f498c",
+    "/dist/fonts/graphik/GraphikMedium.otf": "/dist/fonts/graphik/GraphikMedium.otf?id=ac2c53a1537de3ab3b858878f3811383",
+    "/dist/fonts/graphik/GraphikRegular.otf": "/dist/fonts/graphik/GraphikRegular.otf?id=9f77f5a3abbe6495080ea1ac2f133421",
+    "/dist/fonts/inter/Inter-Bold.woff": "/dist/fonts/inter/Inter-Bold.woff?id=30c82e2fe5430c4ac19e6db480a40730",
+    "/dist/fonts/inter/Inter-Bold.woff2": "/dist/fonts/inter/Inter-Bold.woff2?id=2bdb1fb3ddb113468239c9dfa9889ecf",
+    "/dist/fonts/inter/Inter-Medium.woff": "/dist/fonts/inter/Inter-Medium.woff?id=3d54c2db84475987ec21de0943859abc",
+    "/dist/fonts/inter/Inter-Medium.woff2": "/dist/fonts/inter/Inter-Medium.woff2?id=474e3d5a2d3cdd48ad8924807e2278e4",
+    "/dist/fonts/inter/Inter-Regular.woff": "/dist/fonts/inter/Inter-Regular.woff?id=c4fc5570d8d2a06d44531af4b11e1fd6",
+    "/dist/fonts/inter/Inter-Regular.woff2": "/dist/fonts/inter/Inter-Regular.woff2?id=f5af1f40cf0210f374cece0e369a988e",
+    "/dist/fonts/nib-pro/NibPro-Regular.ttf": "/dist/fonts/nib-pro/NibPro-Regular.ttf?id=98c181080aca630f5f27bfc7b830db08",
+    "/dist/fonts/nib-pro/NibPro-SemiBold.ttf": "/dist/fonts/nib-pro/NibPro-SemiBold.ttf?id=2a4fbc49e39ae9559334a5d6786c485a"
 }
