--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,12 +1,14 @@
 {
-    "/dist/app.js": "/dist/app.js?id=9ff66d5cd2dc5e4b34303cd28834fecd",
+    "/dist/app.js": "/dist/app.js?id=e62b52b42bf18e2cc8e5611d86307fb0",
     "/dist/blocks/text.js": "/dist/blocks/text.js?id=d41d8cd98f00b204e9800998ecf8427e",
     "/dist/blocks/slider.js": "/dist/blocks/slider.js?id=ec05bc6c4417acb6b335f7f284e1097d",
-    "/dist/editor.css": "/dist/editor.css?id=2855f06a17e8076ccc22b76bd66a4e6a",
-    "/dist/app.css": "/dist/app.css?id=782ca8b2de2bf94f065d367a36b74fe6",
+    "/dist/editor.css": "/dist/editor.css?id=0bbce5e2893143090378fe3de969a613",
+    "/dist/app.css": "/dist/app.css?id=b29d717f95de875382222235d357f32f",
     "/dist/images/arrow-right-black.svg": "/dist/images/arrow-right-black.svg?id=93e2eda19cc9f05d0255099c9c15dc98",
     "/dist/images/arrow-right-white.svg": "/dist/images/arrow-right-white.svg?id=f6b59a0fd671c775dfa94ee62d4c0e2c",
     "/dist/images/arrow-right.svg": "/dist/images/arrow-right.svg?id=7ad45cec8dca4154a4058e987ac11303",
+    "/dist/images/circle-minus.svg": "/dist/images/circle-minus.svg?id=827f63ff42a00d4aabf446012e6d2f4c",
+    "/dist/images/circle-plus.svg": "/dist/images/circle-plus.svg?id=5d63d5e6e4df592913153cf6e2eb07b0",
     "/dist/images/sample-image.jpg": "/dist/images/sample-image.jpg?id=51bfbe0c2d3bc8df0460c0f6f4b8d288",
     "/dist/images/↑.svg": "/dist/images/↑.svg?id=7ad45cec8dca4154a4058e987ac11303",
     "/dist/fonts/graphik/GraphikLight.otf": "/dist/fonts/graphik/GraphikLight.otf?id=01f16bf3e394543179254120111f498c",
