add: block contact

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -2,8 +2,8 @@
     "/dist/app.js": "/dist/app.js?id=12ba130c2093ec27eced4b55ba7beebd",
     "/dist/blocks/text.js": "/dist/blocks/text.js?id=d41d8cd98f00b204e9800998ecf8427e",
     "/dist/blocks/slider.js": "/dist/blocks/slider.js?id=ec05bc6c4417acb6b335f7f284e1097d",
-    "/dist/editor.css": "/dist/editor.css?id=ac8396549131cd07418d3995c3877895",
-    "/dist/app.css": "/dist/app.css?id=b7b248e31cc80d082f5d43547d1a1f95",
+    "/dist/editor.css": "/dist/editor.css?id=a26118899f8ade4398de5068bca99a66",
+    "/dist/app.css": "/dist/app.css?id=089eb07bcaacee0ea49f944a165ba646",
     "/dist/images/arrow-right-black.svg": "/dist/images/arrow-right-black.svg?id=93e2eda19cc9f05d0255099c9c15dc98",
     "/dist/images/arrow-right-white.svg": "/dist/images/arrow-right-white.svg?id=f6b59a0fd671c775dfa94ee62d4c0e2c",
     "/dist/images/arrow-right.svg": "/dist/images/arrow-right.svg?id=7ad45cec8dca4154a4058e987ac11303",
@@ -11,9 +11,12 @@
     "/dist/images/circle-plus.svg": "/dist/images/circle-plus.svg?id=5d63d5e6e4df592913153cf6e2eb07b0",
     "/dist/images/sample-image.jpg": "/dist/images/sample-image.jpg?id=51bfbe0c2d3bc8df0460c0f6f4b8d288",
     "/dist/images/↑.svg": "/dist/images/↑.svg?id=7ad45cec8dca4154a4058e987ac11303",
+    "/dist/fonts/graphik/GraphikBold.otf": "/dist/fonts/graphik/GraphikBold.otf?id=a412f7d5e568f30dc213fa679018d19c",
     "/dist/fonts/graphik/GraphikLight.otf": "/dist/fonts/graphik/GraphikLight.otf?id=01f16bf3e394543179254120111f498c",
     "/dist/fonts/graphik/GraphikMedium.otf": "/dist/fonts/graphik/GraphikMedium.otf?id=ac2c53a1537de3ab3b858878f3811383",
     "/dist/fonts/graphik/GraphikRegular.otf": "/dist/fonts/graphik/GraphikRegular.otf?id=9f77f5a3abbe6495080ea1ac2f133421",
+    "/dist/fonts/graphik/GraphikRegularItalic.otf": "/dist/fonts/graphik/GraphikRegularItalic.otf?id=6d39aa62197de556a01c720b59cc8865",
+    "/dist/fonts/graphik/GraphikSemibold.otf": "/dist/fonts/graphik/GraphikSemibold.otf?id=8a25c992e2f5bc9ef8a263e3b8a3662a",
     "/dist/fonts/inter/Inter-Bold.woff": "/dist/fonts/inter/Inter-Bold.woff?id=30c82e2fe5430c4ac19e6db480a40730",
     "/dist/fonts/inter/Inter-Bold.woff2": "/dist/fonts/inter/Inter-Bold.woff2?id=2bdb1fb3ddb113468239c9dfa9889ecf",
     "/dist/fonts/inter/Inter-Medium.woff": "/dist/fonts/inter/Inter-Medium.woff?id=3d54c2db84475987ec21de0943859abc",
