--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,15 +1,19 @@
 {
-    "/dist/app.js": "/dist/app.js?id=c3196f71ab67dc92aadbf7edcd9e9838",
+    "/dist/app.js": "/dist/app.js?id=bbbb519701df4cece169a9f0ca6c111f",
     "/dist/blocks/text.js": "/dist/blocks/text.js?id=d41d8cd98f00b204e9800998ecf8427e",
     "/dist/blocks/slider.js": "/dist/blocks/slider.js?id=ec05bc6c4417acb6b335f7f284e1097d",
-    "/dist/editor.css": "/dist/editor.css?id=5c1575b76b83877989dfa485be4b2704",
-    "/dist/app.css": "/dist/app.css?id=d511f126cc822a5b4f140126c36056b0",
+    "/dist/editor.css": "/dist/editor.css?id=555852b6c73bf65de8928d2518b819d1",
+    "/dist/app.css": "/dist/app.css?id=98070a18b2b34f24bbd9934d46c6a63b",
     "/dist/images/arrow-right-black.svg": "/dist/images/arrow-right-black.svg?id=93e2eda19cc9f05d0255099c9c15dc98",
     "/dist/images/arrow-right-white.svg": "/dist/images/arrow-right-white.svg?id=f6b59a0fd671c775dfa94ee62d4c0e2c",
     "/dist/images/arrow-right.svg": "/dist/images/arrow-right.svg?id=7ad45cec8dca4154a4058e987ac11303",
     "/dist/images/circle-minus.svg": "/dist/images/circle-minus.svg?id=827f63ff42a00d4aabf446012e6d2f4c",
     "/dist/images/circle-plus.svg": "/dist/images/circle-plus.svg?id=5d63d5e6e4df592913153cf6e2eb07b0",
+    "/dist/images/icon-facebook.svg": "/dist/images/icon-facebook.svg?id=9abf8190d515ad68fdb836178fde6a50",
+    "/dist/images/icon-instagram.svg": "/dist/images/icon-instagram.svg?id=a8e4679522fc08e8603774a4fedbcc50",
+    "/dist/images/icon-linkedin.svg": "/dist/images/icon-linkedin.svg?id=abfd208033ac841ff2fc9cbe68bfaa98",
     "/dist/images/sample-image.jpg": "/dist/images/sample-image.jpg?id=51bfbe0c2d3bc8df0460c0f6f4b8d288",
+    "/dist/images/social-media-facebook-icon.svg": "/dist/images/social-media-facebook-icon.svg?id=9abf8190d515ad68fdb836178fde6a50",
     "/dist/images/↑.svg": "/dist/images/↑.svg?id=7ad45cec8dca4154a4058e987ac11303",
     "/dist/fonts/graphik/GraphikBold.otf": "/dist/fonts/graphik/GraphikBold.otf?id=a412f7d5e568f30dc213fa679018d19c",
     "/dist/fonts/graphik/GraphikLight.otf": "/dist/fonts/graphik/GraphikLight.otf?id=01f16bf3e394543179254120111f498c",
